# pocketHb

./: .gitignore  CITATION.cff  LICENSE  README.md  _confound_results.json  _repro_independent.py  environment-lock.txt  pyproject.toml  requirements.txt
_archive_pre_bbox_fix/: _efficientnet_test.json.pre_bbox_fix  _implementation_checks.json.pre_bbox_fix  _results.json.pre_bbox_fix  pockethb_base.pkl.pre_bbox_fix
docs/: audit_response.md  capture_protocol.md  implementation_correctness_report.md  methodology_divergences.md  reproduction.md
notebooks/: 01_bootstrap.ipynb  02_baseline.ipynb  03_train.ipynb  04_personalize_v1.ipynb  05_personalize_v2.ipynb  06_iphone_inference.ipynb
scripts/: annotate_user_bboxes.py  backbone_efficientnet_test.py  confound_test.py  deaf_model_followup.py  deaf_model_test.py  diagnose_bboxes.py  diagnose_skin_loss.py  download_data.py  dump_nb_outputs.py  eda_quick.py  multi_seed_test.py  overfit_50_test.py  run_chunk7.py  smoke_train.py
space/: README.md  app.py  requirements.txt
src/pockethb/: __init__.py  calibration.py  data.py  dataset.py  embed.py  inference.py  model.py  preprocess.py  regressor.py  train.py
