[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pockethb"
version = "0.1.0"
description = "Open-source replication of the personalization layer from the Mannino et al. PNAS 2025 fingernail-Hb paper."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jayanth Vasupilli" }]
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
  "pillow>=10.0",
  "scikit-learn>=1.4",
  "torch>=2.3",
  "torchvision>=0.18",
  "timm>=1.0",
  "huggingface_hub>=0.24",
  "tqdm",
  "requests",
]

[project.urls]
Repository = "https://github.com/jayanthvee/pocketHb"

[tool.setuptools.packages.find]
where = ["src"]
